--- a/css/style.css
+++ b/css/style.css
@@ -267,6 +267,51 @@ body {
   margin: 0;
   background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
 }
+/* WHY CHOOSE US PAGE  */
+.Choose-us{
+    padding: 60px 20px;
+    background-color: #f8f9fa;
+    text-align: center;
+}
+.Choose-us h2{
+  font-size: 2.5rem;
+  margin-bottom: 30px;
+  
+}
+.grid{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+  gap: 50px;
+  /* max-width: 1200px; */
+  margin: 0 auto;
+}
+.feature-item{
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  padding: 20px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.feature-item img {
+  width: 50px; /* Icon size */
+  height: 50px;
+  margin-bottom: 10px;
+}
+.feature-item:hover{
+  transform: translateY(-5px);
+  box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+  
+}
+.feature-item h3{
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+  color: #007BFF;
+}
+.feature-item p{
+  font-size: 1rem;
+  color: black;
+  line-height: 1.4;
+}
 
 .order-form {
   display: flex;
