--- a/css/style.css
+++ b/css/style.css
@@ -267,6 +267,8 @@ body {
   margin: 0;
   background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
 }
+
+
 /* WHY CHOOSE US PAGE  */
 .Choose-us{
     padding: 60px 20px;
@@ -312,6 +314,8 @@ body {
   color: black;
   line-height: 1.4;
 }
+
+/* order management */
 
 .order-form {
   display: flex;
