--- a/css/contactUs.css
+++ b/css/contactUs.css
@@ -219,11 +219,19 @@ button:hover {
 .info {
   margin-top: 20px;
   color: black;
-  font-size: 25px;
+  font-size: 15px;
 }
 
+.info .mail{
+  margin-bottom: 5px;
+}
 .info i {
   margin-right: 8px;
+}
+.social-icons {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 .footer {
