--- a/css/master.css
+++ b/css/master.css
@@ -268,7 +268,6 @@ body {
   background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
 }
 
-/* WHY CHOOSE US PAGE  */
 .Choose-us {
   padding: 60px 20px;
   background-color: #f8f9fa;
@@ -282,7 +281,6 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 50px;
-  /* max-width: 1200px; */
   margin: 0 auto;
 }
 .feature-item {
@@ -293,7 +291,7 @@ body {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .feature-item img {
-  width: 50px; /* Icon size */
+  width: 50px;
   height: 50px;
   margin-bottom: 10px;
 }
@@ -311,8 +309,6 @@ body {
   color: black;
   line-height: 1.4;
 }
-
-/* order management */
 
 .order-form {
   display: flex;
