--- a/css/employee.css
+++ b/css/employee.css
@@ -109,6 +109,10 @@ body {
   background: rgba(255, 255, 255, 0.2);
   transform: translateY(-2px);
 }
+.nav-active{
+  background: rgba(255, 255, 255, 0.2);
+  transform: translateY(-2px);
+}
 
 .menu-toggle {
   display: none;
