push 1 in contact page gap and remove service section

--- a/css/contactUs.css
+++ b/css/contactUs.css
@@ -145,11 +145,11 @@ body {
 form {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 50px;
 }
 .form-row {
   display: flex;
-  gap: 20px;
+  gap: 50px;
 }
 .form-group {
   flex: 1;
@@ -201,7 +201,7 @@ textarea:not(:placeholder-shown) + label {
 button {
   padding: 14px;
   font-size: 16px;
-  background: linear-gradient(to right, #4facfe, #00f2fe);
+  background: #31A599;
   border: none;
   border-radius: 8px;
   color: white;
