--- a/css/contactUs.css
+++ b/css/contactUs.css
@@ -223,6 +223,12 @@ button {
 button:hover {
   transform: scale(1.03);
 }
+.error {
+  color: red;
+  font-size: 0.8rem;
+  margin-top: 4px;
+  display: block;
+}
 
 .info {
   margin-top: 20px;
